cursos/helm/00_solucions/99_other_wp/wordpress/bbdd-deploy.yaml
# bbdd-deploy.yaml
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: deploy-wp-bbdd
  labels:
    app: "wp-mysql"
    tipo: "practica"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-mysql
  template: # a partir de aquí definimos o pod
    metadata:
      labels:
        app: wp-mysql
    spec:
      containers:
      - name: wp-mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
