cursos/helm/00_solucions/99_other_wp/wordpress/wp-deploy.yaml
# wp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-wp
  labels:
    app: "deploy-wp"
    tipo: "practica"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-wp
  template: 
    metadata:
      labels:
        app: deploy-wp
    spec:
      containers:
      - name: deploy-wp
        image: wordpress:6.1
        ports:
        - containerPort: 8080
