cursos/helm/00_solucions/99_other_wp/wordpress/wp-service.yaml
# wp-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: servicio-wp
spec:
  selector:
    app: deploy-wp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
